--- a/index.html
+++ b/index.html
@@ -1,208 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html class="h-100">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Vanilla Bootstrap v4.2.1 Theme</title>
+    <title>Emiel Dubbink</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/fontAwesome.css">
     <link rel="stylesheet" href="css/hero-slider.css">
-    <link rel="stylesheet" href="css/templatemo-main.css">
-    <link rel="stylesheet" href="css/owl-carousel.css">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
 
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
 
-<body>
-<div class="baner-content" id="home">
-    <div class="container">
-        <div class="first-content">
-            <h1>Emiel</h1>
-            <h1>Dubbink</h1>
-            <span><em>Software </em> Engineer</span>
-            <div class="primary-button">
-                <a href="#services">Discover More</a>
-            </div>
+<body class="h-100">
+
+    <div class="row no-gutters h-100">
+        <div class="col-sm-12 align-self-center">
+            <h1 class="text-center">Emiel Dubbink</h1>
         </div>
     </div>
-</div>
-
-<div class="col about-me-content" id="services">
-    <div class="row">
-        <div class="m-5 d-flex flex-wrap row">
-            <div class="p-5 col-6 col-md-4">
-                <img src="img/EmielsHoofd.png" class="img-fluid image-container shadow">
-            </div>
-            <div class="col-6 col-md-8">
-                <h1 class="display-4 pt-5 pb-5 flex-wrap">Ik ben <span class="text-white">Emiel</span></h1>
-                <div class="d-none d-md-block">
-                    <div class="">
-                        <div class="about-me-container rounded shadow">
-                            <h4 class="p-4">Een tweedejaars HBO-ICT student met het profiel Software Engineering en een
-                                passie voor
-                                het bouwen van keiharde software. Ik ben 23 jaar en kom uit Daarle (Overijssel).</h4>
-                        </div>
-                        <br>
-                        <div class="about-me-container rounded shadow">
-                            <h4 class="p-4">Met mijn studie ben ik mezelf continu aan het ontwikkelen als Software
-                                Engineer, en heb ik inmiddels al
-                                een mooi lijstje aan skills.</h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="d-block d-md-none container-fluid">
-                <div class="">
-                    <div class="about-me-container rounded shadow">
-                        <h4 class="p-4">Een tweedejaars HBO-ICT student met het profiel Software Engineering en een
-                            passie voor
-                            het bouwen van keiharde software. Ik ben 23 jaar en kom uit Daarle (Overijssel).</h4>
-                    </div>
-                    <br>
-                    <div class="about-me-container rounded shadow">
-                        <h4 class="p-4">Met mijn studie ben ik mezelf constant aan het ontwikkelen als Software
-                            Engineer, en heb ik inmiddels al een mooi lijstje aan skills.</h4>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="pb-5 d-flex justify-content-center">
-        <div class="scroll-down primary-button shadow">
-            <a href="#portfolio">Skills</a>
-        </div>
-    </div>
-</div>
-
-<div class="skills-content" id="portfolio">
-    <div class="ml-5 mr-5 row">
-        <div class="col-12 p-5 w-100">
-            <div class="d-flex flex-wrap justify-content-center">
-                <h1 class="display-4 pt-5 pb-5 flex-wrap">Mijn <span class="text-white">skills</span></h1>
-                <div class="w-100"></div>
-                <div class="col-md-5 p-2">
-                    <div class="about-me-container rounded shadow">
-                        <h4 class="p-4">Ik heb met mijn studie al veel ervaring opgedaan op verschillende gebieden van
-                            software en programmeertalen. Ook vind ik het erg leuk om in mijn vrije tijd te
-                            experimenteren met nieuwe dingen.
-                            Om een aantal talen en platformen te noemen waar ik ervaring mee heb: Java, C++, Android,
-                            HTML,
-                            CSS, Vue, React, Laravel, PHP en SQL.</h4>
-                    </div>
-
-                </div>
-                <div class="col-md-5 p-2">
-                    <div class="about-me-container rounded shadow">
-                        <h4 class="p-4">Benieuwd naar voorbeelden van wat ik zoal gemaakt heb? Klik <a
-                                href="portfolio.html" class="text-white">hier</a>
-                            voor mijn portfolio!</h4>
-                    </div>
-                </div>
-            </div>
-            <div class="p-5 d-flex justify-content-center">
-                <div class="scroll-down primary-button shadow">
-                    <a href="#our-story">Contact</a>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-    <div>
-        <div class="blur-background">
-        </div>
-        <div class="tabs-content" id="our-story">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 mx-auto">
-                        <div class="wrapper card bg-dark">
-                            <h1 class="display-4 p  -5 flex-wrap"><span class="text-white">Contact</span></h1>
-                            <div class="">
-                                <div class="about-me-container p-3 rounded shadow">
-                                    <h4 class="p-4">Mijn contactgegevens:</h4>
-                                    <p>Telefoon: <br>
-                                        <a class="text-white" href="tel:+31629975780">06 - 29 97 57 80</a></p>
-                                    <p>E-mail: <br>
-                                        <a class="text-white" href="mailto:emieldubbink@hotmail.com">emieldubbink@hotmail.com</a></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="primary-button">
-                        <a href="#home">Back To Top</a>
-                    </div>
-                    <ul>
-                        <li><a href="https://www.facebook.com/emiel.dubbink" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="mailto:emieldubbink@hotmail.com"><i class="fa fa-envelope"></i></a></li>
-                        <!--<li><a href="#"><i class="fa fa-twitter"></i></a></li>-->
-                        <!--<li><a href="#"><i class="fa fa-linkedin"></i></a></li>-->
-                        <!--<li><a href="#"><i class="fa fa-google"></i></a></li>-->
-                        <!--<li><a href="#"><i class="fa fa-dribbble"></i></a></li>-->
-                    </ul>
-                    <p>Copyright &copy; 2019 Emiel Dubbink</p>
-                </div>
-            </div>
-        </div>
-    </footer>
-
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
     <script src="js/vendor/bootstrap.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
-    <script>
-        function openCity(cityName) {
-            var i;
-            var x = document.getElementsByClassName("city");
-            for (i = 0; i < x.length; i++) {
-                x[i].style.display = "none";
-            }
-            document.getElementById(cityName).style.display = "block";
-        }
-    </script>
-
-    <script>
-        $(document).ready(function () {
-            // Add smooth scrolling to all links
-            $(".fixed-side-navbar a, .primary-button a").on('click', function (event) {
-
-                // Make sure this.hash has a value before overriding default behavior
-                if (this.hash !== "") {
-                    // Prevent default anchor click behavior
-                    event.preventDefault();
-
-                    // Store hash
-                    var hash = this.hash;
-
-                    // Using jQuery's animate() method to add smooth page scroll
-                    // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
-                    $('html, body').animate({
-                        scrollTop: $(hash).offset().top
-                    }, 800, function () {
-
-                        // Add hash (#) to URL when done scrolling (default click behavior)
-                        window.location.hash = hash;
-                    });
-                } // End if
-            });
-        });
-    </script>
 
 </body>
 </html>
